Connected ViewModel with gui

--- a/Digikabu.NET/App.xaml
+++ b/Digikabu.NET/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:Digikabu.NET"
              StartupUri="UI/Window/LoginWindow.xaml">
     <Application.Resources>
-
+        <local:MainViewModel x:Key="mvm"/>
     </Application.Resources>
 </Application>
