--- a/Digikabu.NET/UI/Window/LoginWindow.xaml
+++ b/Digikabu.NET/UI/Window/LoginWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="190" Width="508">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Margin="37,43,0,0" Text="{Binding Name}" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
+        <TextBox HorizontalAlignment="Left" Margin="37,43,0,0" Text="{Binding Username}" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
         <Button Content="Login" HorizontalAlignment="Left" Margin="37,115,0,0" VerticalAlignment="Top">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="Click">
@@ -16,7 +16,7 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </Button>
-        <TextBox HorizontalAlignment="Left" Margin="37,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
+        <TextBox Text="{Binding Password}" HorizontalAlignment="Left" Margin="37,84,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
         <Label Content="UserName" HorizontalAlignment="Left" Margin="34,21,0,0" VerticalAlignment="Top"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="34,62,0,0" VerticalAlignment="Top"/>
         <Image HorizontalAlignment="Left" Height="54" Margin="238,0,0,0" VerticalAlignment="Center" Width="257" Source="/Image/DigikabuNETLogo.png"/>
