--- a/Digikabu.NET/UI/Window/LoginWindow.xaml
+++ b/Digikabu.NET/UI/Window/LoginWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="MainWindow" Height="190" Width="508">
-    
+
     <Grid>
         <TextBox HorizontalAlignment="Left" Margin="37,43,0,0" Text="{Binding Username}" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
         <PasswordBox Name="pbPassword" HorizontalAlignment="Left" Margin="37,84,0,0" PasswordChar="•" VerticalAlignment="Top" Width="175"/>
@@ -20,6 +20,7 @@
         </Button>
         <Label Content="UserName" HorizontalAlignment="Left" Margin="34,21,0,0" VerticalAlignment="Top"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="34,62,0,0" VerticalAlignment="Top"/>
-        <Image HorizontalAlignment="Left" Height="54" Margin="238,0,0,0" VerticalAlignment="Center" Width="257" Source="/Image/DigikabuNETLogo.png"/>
+        <Image HorizontalAlignment="Left"  Margin="235,31,0,0" VerticalAlignment="Top" Source="../../Resources/Digikabu_dark.png" Name="ilogo" Height="96" Width="269"/>
+
     </Grid>
 </Window>
