--- a/Digikabu.NET/UI/Window/MasterWindow.xaml
+++ b/Digikabu.NET/UI/Window/MasterWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MasterWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock Name="tb"></TextBlock>
     </Grid>
 </Window>
